KNOWN BUG:
Valgrind-2.1.X will interfere with writeactive, break fchmod.
Use Valgrind 2.0.
|
20040818a: Changes since 20040813a:
- Feature: forward ported the "noread" feature from leafnode-1,
  suggested by Cory C. Albrecht.
- Feature: Retry fetching bodies of delaybody articles only four times,
  then give up.

20040813a: Changes since 20040513a:
- Bugfix: texpire will now properly repair hard links of cross-posted
  articles. Bug reported by Jeff Grossman.
- Documentation: The extraneous "/leafnode" component was removed from
  the path names in the manual. Reported by Cory C. Albrecht.
- Cleanup: The code is now valid C and C++.

20040513a: Changes since 20040510a:
- Bugfix: fetchnews will try authentication when GROUP command replies 480.
- Bugfix: bogus "too few fields in DATE reply" in debug mode.
- Bugfix: plugged some memory leaks.
- Cleanup: fchmod bug report message revised to include "file
  descriptor".

20040510a: Changes since 20040326a:
- applyfilter crashed when an article had the "Message-ID" header in
  different case, for example, "Message-Id". Reported by Robert
  Marshall.
- Do not run chmod -R on the spool unconditionally, it's too expensive.
  Just print a message what to type.

20040326a: Changes since 20040305a:
- VERSIONS 20040319a AND 20040324a HAVE BEEN WITHDRAWN.
- Documentation: document logstderr instead of the improper
  ln_log_stderronly. Patch by Thomas Schwinge.
- Documentation: mention there was an internal change to stringlist
  handling before 20040227a. This triggered the XPAT/XHDR/NEWNEWS
  regression.
- Bugfix: XPAT, XHDR, NEWNEWS caused a segmentation fault when issued
  without argument (slrn bug triggered by ESC 1 ESC p or ESC 2 ESC p for
  instance). Reported by Robert Grimm.
- Leafnode now makes all directories group writable by default but
  withdraws *all* world permissions. To meddle with the spool, put the
  user to meddle in the same group that the news user uses as primary